--- a/estilos/css/site.css
+++ b/estilos/css/site.css
@@ -1,3 +1,47 @@
 body {
     font-family: var(--principal_font);
 }
+
+.container {
+    max-width: 1440px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+#header .menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 0;
+}
+#header .menu .logo {
+    width: 100%;
+    max-width: 100px;
+}
+#header .menu .logo img {
+    width: 100%;
+}
+#header .menu .list_pages {
+    display: flex;
+}
+#header .menu .list_pages .item {
+    margin: 0 20px;
+    text-transform: uppercase;
+    font-size: var(--title-medium);
+}
+#header .menu .list_pages .item a {
+    color: var(--principal-color-font);
+}
+#header .menu .list_pages .item a::after {
+    content: "";
+    display: block;
+    width: 00px;
+    height: 4px;
+    margin-top: 5px;
+    background: var(--principal-color);
+    transition: all 1s ease;
+}
+#header .menu .list_pages .item:hover a::after, #header .menu .list_pages .item.active a::after {
+    width: 30px;
+}
