--- a/estilos/css/padroes.css
+++ b/estilos/css/padroes.css
@@ -3,4 +3,5 @@ body {
     --title-medium: 18px;
     --principal-color-font: #292d33;
     --principal-color: #c9e9f7;
+    --second-color: #292d33;
 }
