--- a/estilos/css/site.css
+++ b/estilos/css/site.css
@@ -8,12 +8,16 @@ body {
     height: 100%;
     margin: 0 auto;
 }
-
 #header .menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 40px 0;
+    margin-top: -180px;
+    transition: all 2s ease;
+}
+#header .menu.active {
+    margin: 0;
 }
 #header .menu .logo {
     width: 100%;
@@ -45,3 +49,5 @@ body {
 #header .menu .list_pages .item:hover a::after, #header .menu .list_pages .item.active a::after {
     width: 30px;
 }
+
+#footer { background: var(--second-color); padding: 30px 0;}
