--- a/estilos/css/site.css
+++ b/estilos/css/site.css
@@ -1,23 +1,30 @@
 body {
     font-family: var(--principal_font);
+    position: relative;
 }
-
 .container {
     max-width: 1440px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
 }
+#header {
+    position: fixed;
+    left: 0;
+    top: -300px;
+    width: 100%;
+    background: #fff;
+    transition: all 2s ease;
+    z-index: 5;
+}
+#header.active {
+    top: 0;
+}
 #header .menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0;
-    margin-top: -180px;
-    transition: all 2s ease;
-}
-#header .menu.active {
-    margin: 0;
+    padding: 20px 0;
 }
 #header .menu .logo {
     width: 100%;
@@ -50,4 +57,70 @@ body {
     width: 30px;
 }
 
-#footer { background: var(--second-color); padding: 30px 0;}
+#footer {
+    background: var(--second-color);
+    padding: 30px 0;
+}
+#footer .menu {
+    width: 100%;
+    text-align: center;
+    color: #fff;
+}
+#footer .menu a {
+    color: #f4cab6;
+}
+#footer .menu .redes {
+    margin-top: 15px;
+}
+#footer .menu .redes a i{
+    color: #fff;
+    transition: all 0.5s ease;
+    margin: 0 5px;
+}
+#footer .menu .redes a:hover i{
+    color: #f4cab6;
+}
+
+#home .banner {
+    height: 100vh;
+    position: relative;
+    background: var(--second-color);
+}
+#home .banner::after {
+    content: "";
+    background: var(--second-color);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    position: absolute;
+    opacity: 0.5;
+}
+#home .banner .banner-imagem {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 2s ease;
+    opacity: 0;
+}
+#home .banner .banner-imagem.active {
+    opacity: 1;
+}
+#home .banner .text {
+    color: #fff;
+    position: absolute;
+    left: 0;
+    bottom: 250px;
+    z-index: 3;
+}
+#home .banner .text .title{
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 600;
+}
+#home .banner .text .details {
+    margin-top: 25px;
+    font-size: 18px;
+    max-width: 400px;
+}
