--- a/estilos/css/site.css
+++ b/estilos/css/site.css
@@ -24,14 +24,19 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 40px 0;
+    transition: all 1s ease;
+}
+#header.float .menu {
     padding: 20px 0;
 }
 #header .menu .logo {
     width: 100%;
     max-width: 100px;
 }
-#header .menu .logo img {
-    width: 100%;
+#header .menu .logo i {
+    color: var(--principal-color);
+    font-size: 50px;
 }
 #header .menu .list_pages {
     display: flex;
@@ -40,6 +45,9 @@ body {
     margin: 0 20px;
     text-transform: uppercase;
     font-size: var(--title-medium);
+}
+#header .menu .list_pages .item:last-child {
+    margin-right: 0;
 }
 #header .menu .list_pages .item a {
     color: var(--principal-color-font);
@@ -101,7 +109,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: all 2s ease;
+    transition: all 1s ease;
     opacity: 0;
 }
 #home .banner .banner-imagem.active {
@@ -110,17 +118,47 @@ body {
 #home .banner .text {
     color: #fff;
     position: absolute;
-    left: 0;
-    bottom: 250px;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
     z-index: 3;
+    text-align: center;
+    max-width: 1000px;
 }
 #home .banner .text .title{
     font-size: 60px;
     line-height: 60px;
-    font-weight: 600;
+    font-family: "oleo_script_swash_capsregular";
 }
-#home .banner .text .details {
-    margin-top: 25px;
+#home .banner .text .subtitle{
+    font-size: 25px;
+}
+
+#home .banner .text .button {
     font-size: 18px;
-    max-width: 400px;
+    background: #516565;
+    padding: 20px 40px;
+    color: var(--second-color);
+    display: inline-block;
+    border-radius: 40px;
+    cursor: pointer;
+    transition: all 0.8s ease;
 }
+
+#home .banner .text .button:hover {
+    background: #fff;
+    color: #516565;
+
+}
+
+#home .banner .text .item{
+   margin-bottom: 15px;
+   opacity: 0;
+   transition: 0.8s ease all;
+}
+
+#home .banner .text .item.active{
+    opacity: 1;
+    margin: 0 0 15px 0;
+}
+
