--- a/estilos/css/site.css
+++ b/estilos/css/site.css
@@ -4,10 +4,27 @@ body {
 }
 .container {
     max-width: 1440px;
-    width: 100%;
+    width: calc(100% - 60px);
     height: 100%;
     margin: 0 auto;
 }
+.content {
+    display: flex;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  transition: all 0.5s ease;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--second-color);
+}
+
 #header {
     position: fixed;
     left: 0;
@@ -133,7 +150,6 @@ body {
 #home .banner .text .subtitle{
     font-size: 25px;
 }
-
 #home .banner .text .button {
     font-size: 18px;
     background: #516565;
@@ -144,21 +160,55 @@ body {
     cursor: pointer;
     transition: all 0.8s ease;
 }
-
 #home .banner .text .button:hover {
     background: #fff;
     color: #516565;
 
 }
-
 #home .banner .text .item{
    margin-bottom: 15px;
    opacity: 0;
    transition: 0.8s ease all;
 }
-
 #home .banner .text .item.active{
     opacity: 1;
     margin: 0 0 15px 0;
 }
+#about_us {
+    padding: 150px 0;
+    height: 100vh;
+}
+#about_us .imagem_space {
+    width: 60%;
+}
 
+#about_us .imagem_space .icon {
+    position: absolute;
+    right: -60px;
+    bottom: -60px;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    max-height: 250px;
+    max-width: 250px;
+}
+#about_us .imagem_space .icon img {
+    width: 100%;
+    object-fit: cover;
+}
+
+#about_us .text {
+    width: 40%;
+}
+#about_us .imagem_space .imagem_main {
+    width: 100%;
+    max-width: 570px;
+    position: relative;
+
+}
+#about_us .imagem_space .imagem_main img {
+    width: 100%;
+    object-fit: cover;
+
+}
